<resources>
    <string name="app_name">Lesson_5_Klyueva</string>

    <!-- Text for buttons -->
    <string name="button_to_first_activity">Go to 1</string>
    <string name="button_to_second_activity">Go to 2</string>
    <string name="button_to_third_activity">Go to 3</string>
    <string name="button_to_fourth_activity">Go to 4</string>
    <string name="button_to_fifth_activity">Go to 5</string>
    <string name="button_to_fifth_activity_2">Go To 5 (Ex 4)</string>
    <string name="button_to_sixth_activity">Go to 6</string>
    <string name="button_to_this">Go to 4 again</string>

    <!-- Activity 5 -->
    <string name="button_deliver_result">Deliver Result</string>
    <string name="edit_text_input_result">Вводите текст для снэкбара</string>
    <string name="edit_text_data">Введите текст для 4 задания</string>
    <string name="button_save">Save</string>

    <!-- Text for activities -->
    <string name="text_view_activity_1">Activity 1</string>
    <string name="text_view_activity_2">Activity 2</string>
    <string name="text_view_activity_3">Activity 3</string>
    <string name="text_view_activity_4">Activity 4</string>
    <string name="text_view_activity_5">Activity 5</string>
    <string name="toolbar_services_title">Услуги</string>
    <string name="text_view_description">Услуги управляющей компании будут доступны после сдачи дома</string>
    <string name="text_view_title">Услуги</string>
    <string name="textViewShowAll">Все</string>
    <string name="text_view_offer_service">Предложить услугу</string>
    <string name="image_view_service_image_desc">Service Image</string>
    <string name="image_view_service_favorite_desc">Service Favorite</string>
    <string name="context_menu">Context Menu</string>
    <string name="menu_service_favorite">Добавить в избранное</string>

    <!-- Activity 6 -->

</resources>