<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FirstActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/text_view_activity_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonToSixthActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|start"
        android:layout_margin="@dimen/standard_margin"
        android:text="@string/button_to_sixth_activity" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonToFourthActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:layout_margin="@dimen/standard_margin"
        android:text="@string/button_to_fourth_activity" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonToSecondActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_margin="@dimen/standard_margin"
        android:text="@string/button_to_second_activity" />

</FrameLayout>