<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/text_view_activity_3" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:layout_margin="@dimen/standard_margin"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonToFifthActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_to_fifth_activity" />

        <!-- Вторая кнопка для обычного перехода, без результата -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonToFifthActivity2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_to_fifth_activity_2" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonToFirstActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_margin="@dimen/standard_margin"
        android:text="@string/button_to_first_activity" />
</FrameLayout>